--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 
 dependencies:
   platform: ^3.1.0
-  # flutter_blue: ^0.8.0
+  flutter_blue: ^0.8.0
   path: ^1.8.0
   flutter_archive: ^4.0.1
   path_provider: ^2.0.5
@@ -23,6 +23,7 @@ dependencies:
     path: ../
 
   cupertino_icons: ^1.0.0
+  
 
 dev_dependencies:
   flutter_test:
