--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,11 +6,13 @@ description: Demonstrates how to use the mcumgr_flutter plugin.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.19.0 <3.0.0"
 
 dependencies:
+  ble_service:
+    path: packages/ble_service
   platform: ^3.1.0
-  flutter_blue: ^0.8.0
+  # flutter_blue: ^0.8.0
   path: ^1.8.0
   flutter_archive: ^4.0.1
   path_provider: ^2.0.5
@@ -23,6 +25,8 @@ dependencies:
     path: ../
 
   cupertino_icons: ^1.0.0
+  flutter_reactive_ble: ^5.0.3
+  flutter_bloc: ^8.1.2
   
 
 dev_dependencies:
