--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,15 +4,17 @@ version: 0.1.1+1
 homepage: "https://github.com/NordicSemiconductor/Flutter-nRF-Connect-Device-Manager"
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.19.0 <3.0.0"
   flutter: ">=2.0.0"
 
 dependencies:
+  bloc: ^8.1.1
+  equatable: ^2.0.5
   fixnum: ^1.1.0
   flutter:
     sdk: flutter
   protobuf: ^2.1.0
-  rxdart: ^0.26.0
+  rxdart: ^0.27.7
   tuple: ^2.0.1
 
 dev_dependencies:
